--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* Basic styles */
 *,
 *::before,
 *::after {
@@ -61,18 +62,6 @@ img {
   max-width: 100%;
   height: auto;
 }
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 .container {
   max-width: 1158px;
   padding: 0 15px;
@@ -96,6 +85,42 @@ img {
   justify-content: space-between;
   align-items: center;
 }
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+.header-logo-link {
+  display: inline-block;
+  margin-right: 76px;
+  color: var(--iris, #4d5ae5);
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.logo-span {
+  color: var(--navyblue, #2e2f42);
+}
+.header-list {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+.header-menu-item {
+  color: var(--navyblue, #2e2f42);
+  font-family: var(--font-primary);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.header-menu-link {
+  display: inline-block;
+  padding: 24px 0;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .current {
   position: relative;
   color: #404bbf;
@@ -114,53 +139,12 @@ img {
 .address {
   font-style: normal;
 }
-.header-logo {
-  display: inline-block;
-  margin-right: 76px;
-  color: var(--iris, #4d5ae5);
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-.logo-span {
-  color: var(--navyblue, #2e2f42);
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-.header-nav {
-  display: flex;
-  align-items: center;
-}
-.header-list {
-  display: flex;
-  gap: 40px;
-  align-items: center;
-}
-.header-menu-item {
-  color: var(--navyblue, #2e2f42);
-  font-family: var(--font-primary);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-.header-address {
+.header-address-item {
   color: var(--slate, #434455);
   font-family: var(--font-primary);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-}
-.header-item {
-  display: inline-block;
-  padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link:hover,
 .link:focus {
@@ -168,7 +152,23 @@ img {
 }
 
 /* -------------MAIN----------- */
+/* Section-one */
 
+.section-one {
+  background-color: var(--navyblue, #2e2f42);
+  padding: 188px 0;
+  background-image: url(../images/office-hero.jpg);
+  background-size: cover;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/office-hero.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  margin: 0 auto;
+}
 .main-title {
   max-width: 496px;
   margin: 0 auto;
@@ -195,71 +195,48 @@ img {
   letter-spacing: 0.04em;
   background-color: #4d5ae5;
 }
-.header-button {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.btn-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-  margin-bottom: 72px;
-}
-.btn-item {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 12px 24px;
-  border: 1px solid #e7e9fc;
-  border-radius: 4px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #4d5ae5;
-  background-color: #f4f4fd;
-  cursor: pointer;
-}
-.btn-item:hover {
-  color: #ffffff;
-  background-color: #404bbf;
-  border: 1px solid transparent;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.btn-item:focus {
-  color: #ffffff;
-  background-color: #404bbf;
-  border: 1px solid transparent;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-.section-list {
-  display: flex;
-  gap: 24px;
-}
-.section-two-link {
-  width: calc((100% - 72px) / 4);
-}
-.link-communications {
-  width: calc((100% - 48px) / 3);
-}
-.section-item {
-  background: var(--white, #fff);
-  width: calc((100% - 72px) / 4);
-  border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.our-team {
-  padding: 32px 0;
-}
 .text-btn:hover,
 .text-btn:focus {
   background-color: #404bbf;
 }
-.main-title-list {
+.header-button {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+/* Section-two */
+
+.section-two {
+  background: #fff;
+  padding: 120px 0;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+.section-two-list {
+  display: flex;
+  gap: 24px;
+}
+.section-two-item {
+  width: calc((100% - 72px) / 4);
+}
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+.section-two-title {
   margin-bottom: 8px;
   color: var(--navyblue, #2e2f42);
   font-family: var(--font-primary);
@@ -267,16 +244,20 @@ img {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-}
-.section-team .main-title-list {
   text-align: center;
 }
-.main-text {
+.section-two-text {
   color: var(--slate, #434455);
   font-family: var(--font-primary);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+/* Section-three */
+
+.section-three {
+  background: #fff;
+  padding-bottom: 120px;
 }
 .main-title-text {
   color: var(--navyblue, #2e2f42);
@@ -288,16 +269,79 @@ img {
   text-align: center;
   margin-bottom: 72px;
 }
-
-.section-list {
+.section-three-list {
   display: flex;
   max-width: 1128px;
   height: auto;
   gap: 24px;
 }
-button {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.item-communications {
+  width: calc((100% - 48px) / 3);
 }
+/* Section-four */
+
+.section-team {
+  background: var(--cloud, #f4f4fd);
+  padding: 120px 0;
+  text-align: center;
+}
+.section-team-list {
+  display: flex;
+  max-width: 1128px;
+  height: auto;
+  gap: 24px;
+}
+.section-item {
+  background: var(--white, #fff);
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.our-team {
+  padding: 32px 0;
+}
+.text-description {
+  color: var(--slate, #434455);
+  font-family: var(--font-primary);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+.icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+.icon-link {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-link:hover {
+  background-color: #404bbf;
+}
+.icon-link:focus {
+  background-color: #404bbf;
+}
+.svg-team {
+  fill: #f4f4fd;
+}
+/* Section-five */
+
+.section-five {
+  padding: 120px 0;
+} 
 .title-five {
   font-size: 36px;
   line-height: 1.11;
@@ -333,159 +377,15 @@ button {
   border-color: #404bbf;
   color: #404bbf;
 }
-.portfolio-title {
-  color: var(--navyblue, #2e2f42);
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  margin-bottom: 8px;
-}
-.portfolio-paragraph {
-  color: var(--slate, #434455);
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-.text-description {
-  color: var(--slate, #434455);
-  font-family: var(--font-primary);
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  text-align: center;
-}
-.portfolio-list {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 24px;
-  row-gap: 48px;
-}
-.img-portfolio {
-  width: calc((100% - 48px) / 3);
-}
-.portfolio-cards {
-  display: block;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-cards:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.portfolio-cards:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.container-img-portfolio {
-  position: relative;
-  overflow: hidden;
-}
-.text-new-portfolio {
-  position: absolute;
-  top: 0;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-cards:hover .text-new-portfolio {
-  transform: translateY(0);
-}
-.portfolio-cards:focus .text-new-portfolio {
-  transform: translateY(0);
-}
-/* ----ICONS---- */
-.icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 112px;
-  background-color: #f4f4fd;
-  border-radius: 4px;
-  margin-bottom: 8px;
-}
-.icon-list {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
-}
-.icon-item {
-  width: 40px;
-  height: 40px;
-}
-.icon-link {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.icon-link:hover {
-  background-color: #404bbf;
-}
-.icon-link:focus {
-  background-color: #404bbf;
-}
-.svg-team {
-  fill: #f4f4fd;
-}
 .svg-clients {
   fill: currentColor;
 }
 .clients-link:hover .svg-clients {
   fill: #8e8f99;
 }
-/* ---------Section----------- */
-.section-one {
-  background-color: var(--navyblue, #2e2f42);
-  padding: 188px 0;
-  background-image: url(../images/office-hero.jpg);
-  background-size: cover;
-  background-image: linear-gradient(
-      rgba(46, 47, 66, 0.7),
-      rgba(46, 47, 66, 0.7)
-    ),
-    url(../images/office-hero.jpg);
-  max-width: 1440px;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin: 0 auto;
-}
-.section-two {
-  background: #fff;
-  padding: 120px 0;
-}
 
-.section-three {
-  background: #fff;
-  padding-bottom: 120px;
-}
-
-.section-team {
-  background: var(--cloud, #f4f4fd);
-  padding: 120px 0;
-}
-.section-five {
-  padding: 120px 0;
-}
-
-.section-portfolio {
-  background: #fff;
-  padding-top: 96px;
-  padding-bottom: 120px;
-}
 /* --------FOOTER---------- */
+
 .footer {
   background: var(--navyblue, #2e2f42);
   padding-top: 100px;
@@ -494,6 +394,64 @@ button {
 .footer .container {
   display: flex;
   align-items: baseline;
+}
+.footer-container {
+  margin-right: 120px;
+}
+.footer-logo {
+  display: inline-block;
+  margin-bottom: 16px;
+  color: var(--iris, #4d5ae5);
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.span-footer {
+  color: var(--cloud, #f4f4fd);
+}
+.footer-text {
+  line-height: 1.5;
+  color: #f4f4fd;
+  letter-spacing: 0.02em;
+  max-width: 264px;
+}
+.footer-paragraph {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-link:hover {
+  background-color: #31d0aa;
+}
+.footer-link:focus {
+  background-color: #31d0aa;
+}
+.svg-footer {
+  fill: #f4f4fd;
 }
 .container-form {
   margin-left: 80px;
@@ -546,65 +504,9 @@ button {
 .svg-subscribe {
   margin-left: 16px;
 }
-.footer-container {
-  margin-right: 120px;
-}
-.span-footer {
-  color: var(--cloud, #f4f4fd);
-}
-.footer-text {
-  line-height: 1.5;
-  color: #f4f4fd;
-  letter-spacing: 0.02em;
-  max-width: 264px;
-}
-.footer-logo {
-  display: inline-block;
-  margin-bottom: 16px;
-  color: var(--iris, #4d5ae5);
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-.footer-paragraph {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #ffffff;
-  margin-bottom: 16px;
-}
-.footer-list {
-  display: flex;
-  gap: 16px;
-}
-.footer-item {
-  width: 40px;
-  height: 40px;
-}
-.footer-link {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer-link:hover {
-  background-color: #31d0aa;
-}
-.footer-link:focus {
-  background-color: #31d0aa;
-}
-.svg-footer {
-  fill: #f4f4fd;
-}
-/* ---- MODAL ---- */
+
+/* ---- MODAL-WINDOW ---- */
+
 .container-modal {
   position: fixed;
   top: 0;
@@ -681,7 +583,9 @@ font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.04em;
 margin-bottom: 4px;
-
+}
+.modal-input-wrap {
+  position: relative;
 }
 .modal-input {
   width: 100%;
@@ -696,12 +600,6 @@ margin-bottom: 4px;
 .modal-input:focus {
   border-color: #4D5AE5;
 }
-.modal-input:focus + .modal-svg {
-  fill: #4D5AE5;
-}
-.modal-input-wrap {
-  position: relative;
-}
 .modal-svg {
   fill: #2E2F42;
   position: absolute;
@@ -710,15 +608,8 @@ margin-bottom: 4px;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
-.modal-check-container {
-  position: relative;
-}
-.modal-svg-check {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 10px;
-  height: 8px;
+.modal-input:focus + .modal-svg {
+  fill: #4D5AE5;
 }
 .modal-field-textarea {
   margin-bottom: 16px;
@@ -745,10 +636,11 @@ margin-bottom: 4px;
   border-color: #4D5AE5;
 }
 .modal-check-container {
+  position: relative;
   margin-bottom: 24px;
 }
 .modal-check-text {
-  color: var(--lightslate, #8E8F99);
+color: var(--lightslate, #8E8F99);
 font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.04em;
@@ -766,13 +658,20 @@ display: flex;
   fill: transparent;
   margin: 0 8px;
 }
-.modal-check-link {
-color: #4d5ae5;
+.modal-svg-check {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 10px;
+  height: 8px;
 }
 .modal-check:checked + .modal-check-text span {
   background-color:var(--ocean);
   border: none;
   fill:var(--cloud);
+}
+.modal-check-link {
+color: #4d5ae5;
 }
 .modal-btn-send {
 display: block;
@@ -791,3 +690,113 @@ font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.04em;
 }
+
+/*------ Portfolio ------*/
+
+.section-portfolio {
+  background: #fff;
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
+.btn-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
+}
+.btn-item {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 12px 24px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  background-color: #f4f4fd;
+  cursor: pointer;
+}
+.btn-item:hover {
+  color: #ffffff;
+  background-color: #404bbf;
+  border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+.btn-item:focus {
+  color: #ffffff;
+  background-color: #404bbf;
+  border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+button {
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.img-portfolio {
+  width: calc((100% - 48px) / 3);
+}
+.portfolio-cards {
+  display: block;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-cards:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-cards:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.container-img-portfolio {
+  position: relative;
+  overflow: hidden;
+}
+.text-new-portfolio {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-cards:hover .text-new-portfolio {
+  transform: translateY(0);
+}
+.portfolio-cards:focus .text-new-portfolio {
+  transform: translateY(0);
+}
+.portfolio-title {
+  color: var(--navyblue, #2e2f42);
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  margin-bottom: 8px;
+}
+.portfolio-paragraph {
+  color: var(--slate, #434455);
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
