--- a/css/styles.css
+++ b/css/styles.css
@@ -106,8 +106,8 @@ img {
 }
 .header-list {
   display: flex;
-  gap: 40px;
   align-items: center;
+  display: none;
 }
 .header-menu-item {
   color: var(--navyblue, #2e2f42);
@@ -140,6 +140,9 @@ img {
 .address {
   font-style: normal;
 }
+.header-address-list {
+  display: none;
+}
 .header-address-item {
   color: var(--slate, #434455);
   font-family: var(--font-primary);
@@ -150,6 +153,108 @@ img {
 .link:hover,
 .link:focus {
   color: #404bbf;
+}
+
+/* Mobail-menu */
+
+.mob-menu {
+position: fixed;
+z-index: 100;
+width: 100vw;
+height: 100vh;
+padding: 24px;
+background-color: #FFF;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+overflow: auto;
+}
+.burger-btn-open {
+  display: block;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+}
+.burger-btn-close {
+  display: block;
+  margin-left: auto;
+  margin-bottom: 32px;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+.burger-btn-close:focus {
+ color: var(--ocean, #404BBF);
+}
+.burger-list {
+  margin-bottom: 100px;
+}
+.burger-item:not(:last-child) {
+   margin-bottom: 40px;
+}
+.burger-link {
+color: var(--navyblue, #2E2F42);
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+}
+.burger-link:hover {
+  color: var(--ocean, #404BBF);
+}
+.burger-link:focus {
+   color: var(--ocean, #404BBF);
+}
+.active {
+color: var(--ocean, #404BBF);
+}
+.burger-address-item {
+   margin-bottom: 40px;
+}
+.burger-address-link span {
+color: var(--iris, #4D5AE5);
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+}
+.burger-address-link {
+  color: var(--slate, #434455);
+font-size: 20px;
+font-weight: 500;
+line-height: 1.2;
+letter-spacing: 0.02em;
+}
+.burger-icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.burger-icon-item {
+  width: 40px;
+  height: 40px;
+}
+
+.burger-icon-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+.burger-icon-link:hover {
+  background-color: #404bbf;
+}
+.burger-icon-link:focus {
+  background-color: #404bbf;
 }
 
 /* -------------MAIN----------- */
@@ -171,11 +276,11 @@ img {
   margin: 0 auto;
 }
 .main-title {
-  max-width: 496px;
+  max-width: 100%;
   margin: 0 auto;
   color: var(--white, #fff);
   font-family: var(--font-primary);
-  font-size: 56px;
+  font-size: 36px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
@@ -207,7 +312,7 @@ img {
 
 .section-two {
   background: #fff;
-  padding: 120px 0;
+  padding: 96px 0;
 }
 .visually-hidden {
   position: absolute;
@@ -278,18 +383,21 @@ img {
 
 .section-team {
   background: var(--cloud, #f4f4fd);
-  padding: 120px 0;
+  padding: 96px 0;
   text-align: center;
 }
 .section-team-list {
   display: flex;
-  max-width: 1128px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
   height: auto;
-  gap: 24px;
+  gap: 72px;
 }
 .section-item {
   background: var(--white, #fff);
-  width: calc((100% - 72px) / 4);
+  /* width: calc((100% - 72px) / 4); */
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -336,7 +444,7 @@ img {
 /* Section-five */
 
 .section-five {
-  padding: 120px 0;
+  padding: 96px 0;
 } 
 .title-five {
   font-size: 36px;
@@ -347,15 +455,15 @@ img {
 }
 .clients-list {
   display: flex;
-  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 72px 16px;
 }
 .clients-item {
-  width: calc((100% - 120px) / 6);
-  height: 88px;
+  /* width: calc((100% - 120px) / 6); */
 }
 .clients-link {
-  width: 100%;
-  height: 100%;
   display: flex;
   border: 1px solid #8e8f99;
   border-radius: 4px;
@@ -374,6 +482,8 @@ img {
   color: #404bbf;
 }
 .svg-clients {
+  width: 104px;
+  height: 56px;
   fill: currentColor;
 }
 .clients-link:hover .svg-clients {
