--- a/css/styles.css
+++ b/css/styles.css
@@ -160,13 +160,14 @@ img {
 .mob-menu {
 position: fixed;
 z-index: 100;
-width: 100vw;
-height: 100vh;
+width: 100%;
+height: 100%;
+top: 0;
 padding: 24px;
 background-color: #FFF;
 display: flex;
 flex-direction: column;
-justify-content: space-around;
+justify-content: space-between;
 overflow: auto;
 }
 .burger-btn-open {
@@ -190,7 +191,7 @@ overflow: auto;
  color: var(--ocean, #404BBF);
 }
 .burger-list {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 .burger-item:not(:last-child) {
    margin-bottom: 40px;
@@ -232,8 +233,7 @@ letter-spacing: 0.02em;
 }
 .burger-icon-list {
   display: flex;
-  justify-content: center;
-  gap: 24px;
+  gap: 40px;
 }
 .burger-icon-item {
   width: 40px;
