--- a/css/media.css
+++ b/css/media.css
@@ -76,7 +76,23 @@
   width: calc((100% - 120px) / 3);
 }
 }
-
+.footer .container {
+display:flex;
+flex-direction: row;
+}
+.footer-logo {
+  margin-left: 0;
+}
+.footer-frame {
+  flex-direction: row;
+  gap: 24px;
+}
+.footer-paragraph {
+  text-align: left;
+}
+.paragraph-form {
+  text-align: left;
+}
 
 @media screen and (min-width: 1158px) {
     .container {
@@ -129,5 +145,22 @@
 } 
 .clients-item {
   width: calc((100% - 120px) / 6);
+}
+.footer .container {
+display:flex;
+flex-direction: row;
+}
+.footer-logo {
+  margin-left: 0;
+}
+.footer-frame {
+  flex-direction: row;
+  gap: 24px;
+}
+.footer-paragraph {
+  text-align: left;
+}
+.paragraph-form {
+  text-align: left;
 }
 }
