--- a/css/styles.css
+++ b/css/styles.css
@@ -502,12 +502,14 @@ letter-spacing: 0.02em;
   display: flex;
   flex-direction: column;
   gap: 72px;
+  align-items: center;
 }
 .footer-container {
-  margin-right: 120px;
+  margin: 0 auto;
 }
 .footer-logo {
   display: inline-block;
+  margin-left: 75px;
   margin-bottom: 16px;
   color: var(--iris, #4d5ae5);
   font-family: "Raleway", sans-serif;
@@ -527,6 +529,7 @@ letter-spacing: 0.02em;
   max-width: 264px;
 }
 .footer-paragraph {
+  text-align: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -562,9 +565,10 @@ letter-spacing: 0.02em;
   fill: #f4f4fd;
 }
 .container-form {
-  margin-left: 80px;
+  margin: 0;
 }
 .paragraph-form {
+  text-align: center;
   margin-bottom: 16px;
   font-size: 16px;
   font-weight: 500;
@@ -574,7 +578,11 @@ letter-spacing: 0.02em;
 }
 .footer-frame {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  gap: 15px;
+}
+.footer-label {
+  width: auto;
 }
 .footer-input {
   width: 264px;
