--- a/css/styles.css
+++ b/css/styles.css
@@ -466,6 +466,8 @@ letter-spacing: 0.02em;
 }
 .clients-link {
   display: flex;
+  width: 100%;
+  height: 88px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   align-items: center;
@@ -483,8 +485,6 @@ letter-spacing: 0.02em;
   color: #404bbf;
 }
 .svg-clients {
-  width: 104px;
-  height: 56px;
   fill: currentColor;
 }
 .clients-link:hover .svg-clients {
@@ -690,15 +690,11 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 margin-bottom: 16px;
 }
-.modal-field {
- margin-bottom: 8px;
-}
 .modal-label {
   color: var(--lightslate, #8E8F99);
 font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.04em;
-margin-bottom: 4px;
 }
 .modal-input-wrap {
   position: relative;
