--- a/css/media.css
+++ b/css/media.css
@@ -6,6 +6,17 @@
       width: 100%;
       height: 100%;
     }
+    .clients-item {
+  width: calc((100% - 16px) / 2);
+}
+}
+
+
+@media screen and (min-width: 320px) and (max-width: 427px) {
+  .modal-window {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 
@@ -25,7 +36,7 @@
     padding-bottom: 96px;
 }
 .clients-item {
-  width: calc((100% - 120px) / 2);
+  width: calc((100% - 16px) / 2);
 }
 }
 
@@ -43,9 +54,8 @@
     }
     .header-address-list {
       display: flex;
-      flex-wrap: wrap;
+      flex-direction: column;
       gap: 12px;
-      padding: 16px 0;
       justify-content: end;
     }
     .main-title {
@@ -59,7 +69,7 @@
   gap: 72px 24px;
 }
     .section-two-item {
-  width: calc((100% - 72px) / 2);
+  width: calc((100% - 24px) / 2);
 }
 .section-two-title {
     text-align: left;
@@ -83,6 +93,7 @@
 .footer .container {
   display: flex;
   flex-direction: row;
+  margin-left: 100px;
   gap: 72px 24px;
   flex-wrap: wrap;
   align-items: flex-start;
@@ -116,10 +127,17 @@
   align-items: center;
   gap: 40px;
     }
+    .header-menu-item {
+      font-size: 16px;
+    }
     .header-address-list {
       display: flex;
-  align-items: center;
-  gap: 40px;
+    align-items: center;
+    flex-direction: row;
+    gap: 40px;
+    }
+    .header-address-item {
+      font-size: 16px;
     }
     .main-title {
     font-size: 56px;
