--- a/css/media.css
+++ b/css/media.css
@@ -13,12 +13,28 @@
 
 
 @media screen and (min-width: 320px) and (max-width: 427px) {
+ 
   .modal-window {
-    width: 100%;
+    width: 270px;
     height: 100%;
+  }
+  .burger-address-link span {
+    font-size: 26px;
+  }
+  .main-title {
+    font-size: 26px;
   }
 }
 
+
+@media screen and (min-width: 320px) and (max-width: 768px) {
+ .header-nav {
+  display: flex;
+  align-items: center;
+  padding-top: 22px;
+  padding-bottom: 22px;
+}
+}
 
 @media screen and (min-width: 428px) {
     .container {
@@ -48,9 +64,12 @@
       display: none;
     }
     .header-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
+    .header-menu-item {
+      font-size: 16px;
     }
     .header-address-list {
       display: flex;
