--- a/css/styles.css
+++ b/css/styles.css
@@ -760,6 +760,7 @@ font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.04em;
 display: flex;
+align-items: center;
 }
 .modal-span {
   width: 16px;
@@ -777,10 +778,10 @@ display: flex;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: 10px;
+  min-width: 10px;
   height: 8px;
 }
-.modal-check:checked + .modal-check-text span {
+.modal-check:checked + .modal-check-text .modal-span {
   background-color:var(--ocean);
   border: none;
   fill:var(--cloud);
