--- a/css/media.css
+++ b/css/media.css
@@ -24,10 +24,13 @@
   .main-title {
     font-size: 26px;
   }
+  .footer-input {
+  width: 290px;
+}
 }
 
 
-@media screen and (min-width: 320px) and (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
  .header-nav {
   display: flex;
   align-items: center;
@@ -55,6 +58,14 @@
   width: calc((100% - 16px) / 2);
 }
 }
+
+
+@media screen and (min-width: 428px) and (max-width: 767px) {
+   .footer-input {
+  min-width: 398px;
+}
+}
+
 
 @media screen and (min-width: 768px) {
     .container {
