--- a/css/styles.css
+++ b/css/styles.css
@@ -581,6 +581,8 @@ letter-spacing: 0.02em;
 }
 .footer-frame {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   gap: 15px;
 }
@@ -604,7 +606,7 @@ letter-spacing: 0.02em;
   color: #ffffff;
 }
 .footer-btn {
-  min-width: 165px;
+  width: 165px;
   height: 40px;
   display: flex;
   justify-content: center;
@@ -763,7 +765,7 @@ display: flex;
 align-items: center;
 }
 .modal-span {
-  width: 16px;
+  min-width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
@@ -772,13 +774,13 @@ align-items: center;
   align-items: center;
   justify-content: center;
   fill: transparent;
-  margin: 0 8px;
+  margin-right: 8px;
 }
 .modal-svg-check {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  min-width: 10px;
+  width: 10px;
   height: 8px;
 }
 .modal-check:checked + .modal-check-text .modal-span {
